chore(scripts): update start-all.sh